# elysium

./: .env.example  .gitattributes  .gitignore  .prettierignore  GDD.md  README.md  eslint.config.js  index.html  instrucoes.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.husky/: pre-commit
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/server/: package.json  tsconfig.json
backup/: elysium.db
backup/_pre-restore-20260421223618/: elysium.db
backup/_safety-20260421-192648/: elysium.db
docs/obsidian/: 00-INDEX.md
farming-system/src/: toolManager.js
scripts/: audit-economy.ts  check-secrets.mjs  e2e-real.ts  e2e.ts  gen_dorinha_sprites.py  generate-asset.ts  generate-sprite.ts  init-backup-repo.ps1  restore-from-gdd.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_expansion_phases.sql  003_openai_generator.sql  004_asset_jobs.sql  005_multi_domain_jobs.sql
src-tauri/resources/aseprite_scripts/: export_layers.lua  extract_palette.lua  pack_sheet.lua  remove_bg.lua  slice_frames.lua
src-tauri/src/: aseprite.rs  assets.rs  backup.rs  claude.rs  game_project.rs  godot_resources.rs  lib.rs  main.rs  projects.rs
src/agents/: agents.ts  base.ts  code_agents.ts  code_runner.ts  runner.ts
src/components/: NPC.jsx
src/data/: npcSchedules.json
src/dialogue/: dorinhaDialog.ts  (+1 more)
(+526 files in other folders)
