[package]
name = "elysium-build-platform"
version = "0.1.0"
description = "Elysium Build Platform - Indie Game Development via Vibe Coding"
authors = ["Elysium"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "elysium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
